# Rine

./: .gitignore  Cargo.toml  README.md
components/file_explorer/: Cargo.toml
components/file_explorer/src/: lib.rs
components/git_features/: Cargo.toml
components/git_features/src/: lib.rs
components/terminal/: Cargo.toml
components/terminal/src/: lib.rs
core/: Cargo.toml
core/src/: main.rs
gui/src/: lib.rs
