[package]
name = "Rine"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "gui",
    "components/file_explorer",
    "components/terminal",
    "components/git_features"
]

[dependencies]
file_explorer = { path = "components/file_explorer" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }